--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -1797,7 +1797,7 @@ user.
 
 #+NAME: fuel-model-compact-table
 #+begin_src python
-# FIXME: Replace this dictionary with something more efficient
+# TODO: OPTIM Replace this dictionary with something more efficient
 # Lookup table including entries for each of the Anderson 13 and Scott & Burgan 40 fuel models.
 #
 # The fields have the following meanings:
@@ -2015,7 +2015,7 @@ def expand_compact_fuel_model(fuel_model_number: cy.int) -> FuelModel:
     )
 
 
-# FIXME: Replace this dictionary with something more efficient
+# TODO: OPTIM Replace this dictionary with something more efficient
 fuel_model_table = cy.declare(dict, { # dict[int, FuelModel]
     k: expand_compact_fuel_model(k) for k in compact_fuel_model_table.keys()
 })
@@ -2106,29 +2106,39 @@ $M_f^{lh}$ is the live herbaceous moisture content.
 @cy.exceptval(check=False)
 def add_dynamic_fuel_loading(fuel_model: FuelModel, M_f: fclaarr) -> FuelModel:
     """
-    Updates M_f and w_o.
+    Updates M_f and w_o. Mutates and returns fuel_model.
     """
     if fuel_model.dynamic:
-        # dynamic fuel model
-        w_o                     : fclaarr   = fuel_model.w_o
-        live_herbaceous_load    : cy.float  = w_o[4]
-        live_herbaceous_moisture: cy.float  = M_f[4]
-        fraction_green          : cy.float  = max(0.0, min(1.0, (live_herbaceous_moisture / 0.9) - 0.3333333333333333))
-        fraction_cured          : cy.float  = 1.0 - fraction_green
-        dynamic_fuel_model      : FuelModel = fuel_model  # FIXME: Restore Python compatibility
-        M_f_copy                : fclaarr   = M_f         # FIXME: Restore Python compatibility
-        M_f_copy[3]                         = M_f_copy[0] # set dead_herbaceous to dead_1hr
-        dynamic_fuel_model.M_f              = M_f_copy
-        w_o_copy                : fclaarr   = w_o
-        w_o_copy[3]                         = live_herbaceous_load * fraction_cured # dead_herbaceous
-        w_o_copy[4]                         = live_herbaceous_load * fraction_green # live_herbaceous
-        dynamic_fuel_model.w_o              = w_o_copy
-        return dynamic_fuel_model
+        # === Dynamic Fuel Model ===
+        # Calculate fraction_green and fraction_cured
+        w_o                     : fclaarr  = fuel_model.w_o
+        live_herbaceous_load    : cy.float = w_o[4]
+        live_herbaceous_moisture: cy.float = M_f[4]
+        fraction_green          : cy.float = max(0.0, min(1.0, (live_herbaceous_moisture / 0.9) - 0.3333333333333333))
+        fraction_cured          : cy.float = 1.0 - fraction_green
+        # Set M_f[dead_herbaceous] equal to M_f[dead_1hr]
+        M_f_dynamic: fclaarr = (M_f[0], # dead_1hr
+                                M_f[1],
+                                M_f[2],
+                                M_f[0], # dead_herbaceous
+                                M_f[4],
+                                M_f[5])
+        # Set w_o[dead_herbaceous] and w_o[live_herbaceous] based on fraction_cured and fraction_green
+        w_o_dynamic: fclaarr = (w_o[0],
+                                w_o[1],
+                                w_o[2],
+                                live_herbaceous_load * fraction_cured, # dead_herbaceous
+                                live_herbaceous_load * fraction_green, # live_herbaceous
+                                w_o[5])
+        # Update the passed in fuel_model to use M_f_dynamic and w_o_dynamic
+        fuel_model.M_f = M_f_dynamic
+        fuel_model.w_o = w_o_dynamic
+        return fuel_model
     else:
-        # static fuel model
-        static_fuel_model: FuelModel = fuel_model # FIXME: Restore Python compatibility
-        static_fuel_model.M_f        = M_f
-        return static_fuel_model
+        # === Static Fuel Model ===
+        # Update the passed in fuel_model to use the passed in M_f
+        fuel_model.M_f = M_f
+        return fuel_model
 #+end_src
 
 *** Size Class Weighting Factors
@@ -2173,8 +2183,9 @@ def compute_gij(firemod_size_classes : fclaarr,
 @cy.exceptval(check=False)
 def add_weighting_factors(fuel_model: FuelModel) -> FuelModel:
     """
-    Assigns f_ij, f_i, and g_ij.
+    Assigns f_ij, f_i, and g_ij. Mutates and returns fuel_model.
     """
+    # Calculate A_ij, A_i, and A_T
     w_o  : fclaarr  = fuel_model.w_o
     sigma: fclaarr  = fuel_model.sigma
     rho_p: fclaarr  = fuel_model.rho_p
@@ -2184,38 +2195,52 @@ def add_weighting_factors(fuel_model: FuelModel) -> FuelModel:
                        (sigma[3] * w_o[3]) / rho_p[3],
                        (sigma[4] * w_o[4]) / rho_p[4],
                        (sigma[5] * w_o[5]) / rho_p[5]) # TODO: OPTIM pre-compute sigma/rho_p
-    A_0  : cy.float = A_ij[0] + A_ij[1] + A_ij[2] + A_ij[3]
-    A_1  : cy.float = A_ij[4] + A_ij[5]
-    A_i  : fcatarr  = (A_0, A_1)
-    A_T  : cy.float = A_0 + A_1
-    f_ij : fclaarr  = (0.0, 0.0, 0.0, 0.0, 0.0, 0.0)
-    f_i  : fcatarr  = (0.0, 0.0)
-    if A_0 > 0.0:
-        A_0_inv: cy.float = 1.0 / A_0
-        f_ij[0] = A_ij[0] * A_0_inv
-        f_ij[1] = A_ij[1] * A_0_inv
-        f_ij[2] = A_ij[2] * A_0_inv
-        f_ij[3] = A_ij[3] * A_0_inv
-    if A_1 > 0.0:
-        A_1_inv: cy.float = 1.0 / A_1
-        f_ij[4] = A_ij[4] * A_1_inv
-        f_ij[5] = A_ij[5] * A_1_inv
+    A_i_0: cy.float = A_ij[0] + A_ij[1] + A_ij[2] + A_ij[3]
+    A_i_1: cy.float = A_ij[4] + A_ij[5]
+    A_i  : fcatarr  = (A_i_0, A_i_1)
+    A_T  : cy.float = A_i_0 + A_i_1
+    # Calculate f_ij
+    f_ij_0   : cy.float = 0.0
+    f_ij_1   : cy.float = 0.0
+    f_ij_2   : cy.float = 0.0
+    f_ij_3   : cy.float = 0.0
+    f_ij_4   : cy.float = 0.0
+    f_ij_5   : cy.float = 0.0
+    A_i_0_inv: cy.float
+    A_i_1_inv: cy.float
+    if A_i_0 > 0.0:
+        A_i_0_inv = 1.0 / A_i_0
+        f_ij_0    = A_ij[0] * A_i_0_inv
+        f_ij_1    = A_ij[1] * A_i_0_inv
+        f_ij_2    = A_ij[2] * A_i_0_inv
+        f_ij_3    = A_ij[3] * A_i_0_inv
+    if A_i_1 > 0.0:
+        A_i_1_inv = 1.0 / A_i_1
+        f_ij_4    = A_ij[4] * A_i_1_inv
+        f_ij_5    = A_ij[5] * A_i_1_inv
+    f_ij: fclaarr = (f_ij_0, f_ij_1, f_ij_2, f_ij_3, f_ij_4, f_ij_5)
+    # Calculate f_i
+    f_i_0  : cy.float = 0.0
+    f_i_1  : cy.float = 0.0
+    A_T_inv: cy.float
     if A_T > 0.0:
-        A_T_inv: cy.float = 1.0 / A_T
-        f_i[0] = A_0 * A_T_inv
-        f_i[1] = A_1 * A_T_inv
-    firemod_size_classes: fclaarr   = fuel_model.firemod_size_classes
-    g_ij                : fclaarr   = (compute_gij(firemod_size_classes, f_ij, firemod_size_classes[0], True),
-                                       compute_gij(firemod_size_classes, f_ij, firemod_size_classes[1], True),
-                                       compute_gij(firemod_size_classes, f_ij, firemod_size_classes[2], True),
-                                       compute_gij(firemod_size_classes, f_ij, firemod_size_classes[3], True),
-                                       compute_gij(firemod_size_classes, f_ij, firemod_size_classes[4], False),
-                                       compute_gij(firemod_size_classes, f_ij, firemod_size_classes[5], False))
-    weighted_fuel_model : FuelModel = fuel_model # FIXME: Restore Python compatibility
-    weighted_fuel_model.f_ij = f_ij
-    weighted_fuel_model.f_i  = f_i
-    weighted_fuel_model.g_ij = g_ij
-    return weighted_fuel_model
+        A_T_inv = 1.0 / A_T
+        f_i_0   = A_i_0 * A_T_inv
+        f_i_1   = A_i_1 * A_T_inv
+    f_i: fcatarr = (f_i_0, f_i_1)
+    # Calculate g_ij
+    firemod_size_classes: fclaarr = fuel_model.firemod_size_classes
+    g_ij                : fclaarr = (compute_gij(firemod_size_classes, f_ij, firemod_size_classes[0], True),
+                                     compute_gij(firemod_size_classes, f_ij, firemod_size_classes[1], True),
+                                     compute_gij(firemod_size_classes, f_ij, firemod_size_classes[2], True),
+                                     compute_gij(firemod_size_classes, f_ij, firemod_size_classes[3], True),
+                                     compute_gij(firemod_size_classes, f_ij, firemod_size_classes[4], False),
+                                     compute_gij(firemod_size_classes, f_ij, firemod_size_classes[5], False))
+    # Update the passed in fuel_model to use f_ij, f_i, and g_ij
+    fuel_model.f_ij = f_ij
+    fuel_model.f_i  = f_i
+    fuel_model.g_ij = g_ij
+    return fuel_model
 #+end_src
 
 *** Live Moisture of Extinction
@@ -2257,43 +2282,47 @@ def add_live_moisture_of_extinction(fuel_model: FuelModel) -> FuelModel:
     """
     Equation 88 from Rothermel 1972 adjusted by Albini 1976 Appendix III.
 
-    Updates M_x.
+    Updates M_x. Mutates and returns fuel_model.
     """
+    # Calculate dead_moisture_factor, dead_loading_factor, and live_loading_factor
     w_o                 : fclaarr  = fuel_model.w_o
-    sigma               : fclaarr  = fuel_model.sigma
+    exp_A_sigma         : fclaarr  = fuel_model.exp_A_sigma
     M_f                 : fclaarr  = fuel_model.M_f
     M_x                 : fclaarr  = fuel_model.M_x
-    exp_A_sigma         : fclaarr  = fuel_model.exp_A_sigma
+    M_x_dead            : cy.float = M_x[0]
     loading_factors     : fclaarr  = (w_o[0] * exp_A_sigma[0],
                                       w_o[1] * exp_A_sigma[1],
                                       w_o[2] * exp_A_sigma[2],
                                       w_o[3] * exp_A_sigma[3],
                                       w_o[4] * exp_A_sigma[4],
                                       w_o[5] * exp_A_sigma[5])
-    dead_loading_factor : cy.float = loading_factors[0] + loading_factors[1] + loading_factors[2] + loading_factors[3]
-    live_loading_factor : cy.float = loading_factors[4] + loading_factors[5]
     dead_moisture_factor: cy.float = (M_f[0] * loading_factors[0] +
                                       M_f[1] * loading_factors[1] +
                                       M_f[2] * loading_factors[2] +
                                       M_f[3] * loading_factors[3])
-    dead_fuel_moisture  : cy.float = ((dead_moisture_factor / dead_loading_factor)
-                                      if (dead_loading_factor > 0.0) else 0.0)
-    M_x_dead            : cy.float = M_x[0]
-    M_x_live            : cy.float
-    if (live_loading_factor > 0.0):
-        dead_to_live_ratio: cy.float = dead_loading_factor / live_loading_factor
-        M_x_live = max(M_x_dead, (2.9 * dead_to_live_ratio * (1.0 - (dead_fuel_moisture / M_x_dead))) - 0.226)
+    dead_loading_factor : cy.float = loading_factors[0] + loading_factors[1] + loading_factors[2] + loading_factors[3]
+    live_loading_factor : cy.float = loading_factors[4] + loading_factors[5]
+    # Calculate M_x_live
+    dead_fuel_moisture: cy.float
+    dead_to_live_ratio: cy.float
+    M_x_live          : cy.float
+    if (dead_loading_factor > 0.0 and live_loading_factor > 0.0):
+        dead_fuel_moisture = dead_moisture_factor / dead_loading_factor
+        dead_to_live_ratio = dead_loading_factor / live_loading_factor
+        M_x_live           = max(M_x_dead,
+                                 (2.9 * dead_to_live_ratio * (1.0 - (dead_fuel_moisture / M_x_dead))) - 0.226)
     else:
         M_x_live = M_x_dead
-    moisturized_fuel_model: FuelModel = fuel_model # FIXME: Restore Python compatibility
-    M_x_new               : fclaarr   = (M_x[0],
-                                         M_x[1],
-                                         M_x[2],
-                                         M_x[3],
-                                         M_x_live,
-                                         M_x_live)
-    moisturized_fuel_model.M_x = M_x_new
-    return moisturized_fuel_model
+    # Calculate M_x_new
+    M_x_new: fclaarr = (M_x[0],
+                        M_x[1],
+                        M_x[2],
+                        M_x[3],
+                        M_x_live,
+                        M_x_live)
+    # Update the passed in fuel_model to use M_x_new
+    fuel_model.M_x = M_x_new
+    return fuel_model
 #+end_src
 
 *** Applying Fuel Moisture to a Fuel Model
@@ -2311,15 +2340,35 @@ Pyretechnics provides the =moisturize= utility function.
 
 #+NAME: moisturize
 #+begin_src python
-# TODO: If these functions aren't called anywhere else, create a copy
-#       of the fuel model here and mutate it in the called functions.
 @cy.ccall
 @cy.exceptval(check=False)
 def moisturize(fuel_model: FuelModel, fuel_moisture: fclaarr) -> FuelModel:
     """
     Updates w_o, M_f, and M_x and assigns f_ij, f_i, and g_ij.
+    Returns a new FuelModel struct.
     """
-    dynamic_fuel_model    : FuelModel = add_dynamic_fuel_loading(fuel_model, fuel_moisture)
+    # Create a copy of fuel_model
+    fuel_model_copy: FuelModel = FuelModel(
+        number               = fuel_model.number,
+        delta                = fuel_model.delta,
+        M_x                  = fuel_model.M_x,
+        M_f                  = fuel_model.M_f,
+        w_o                  = fuel_model.w_o,
+        sigma                = fuel_model.sigma,
+        h                    = fuel_model.h,
+        rho_p                = fuel_model.rho_p,
+        S_T                  = fuel_model.S_T,
+        S_e                  = fuel_model.S_e,
+        dynamic              = fuel_model.dynamic,
+        burnable             = fuel_model.burnable,
+        exp_A_sigma          = fuel_model.exp_A_sigma,
+        firemod_size_classes = fuel_model.firemod_size_classes,
+        f_ij                 = fuel_model.f_ij,
+        f_i                  = fuel_model.f_i,
+        g_ij                 = fuel_model.g_ij,
+    )
+    # Mutate and return the copy
+    dynamic_fuel_model    : FuelModel = add_dynamic_fuel_loading(fuel_model_copy, fuel_moisture)
     weighted_fuel_model   : FuelModel = add_weighting_factors(dynamic_fuel_model)
     moisturized_fuel_model: FuelModel = add_live_moisture_of_extinction(weighted_fuel_model)
     return moisturized_fuel_model
@@ -2455,14 +2504,14 @@ dynamic_fuel_model_number = 101 # GR1
 static_fuel_model  = get_fuel_model(static_fuel_model_number)
 dynamic_fuel_model = get_fuel_model(dynamic_fuel_model_number)
 
-fuel_moisture = [
+fuel_moisture = (
     0.05, # dead_1hr
     0.10, # dead_10hr
     0.15, # dead_100hr
     0.00, # dead_herbaceous (will be set by moisturize for dynamic fuel models)
     0.30, # live_herbaceous
     0.50, # live_woody
-]
+)
 
 print("Moisturized Static Fuel Model: R01")
 pprint(moisturize(static_fuel_model, fuel_moisture))
@@ -3815,14 +3864,14 @@ import pyretechnics.surface_fire as sf
 
 # Set input parameters
 fuel_model    = fm.get_fuel_model(101) # GR1
-fuel_moisture = [
+fuel_moisture = (
     0.05, # dead_1hr
     0.10, # dead_10hr
     0.15, # dead_100hr
     0.00, # dead_herbaceous (will be set by moisturize for dynamic fuel models)
     0.90, # live_herbaceous
     0.60, # live_woody
-]
+)
 
 # Apply fuel moisture to fuel model
 moisturized_fuel_model = fm.moisturize(fuel_model, fuel_moisture)
@@ -3897,14 +3946,14 @@ import pyretechnics.surface_fire as sf
 
 # Set input parameters
 fuel_model    = fm.get_fuel_model(101) # GR1
-fuel_moisture = [
+fuel_moisture = (
     0.05, # dead_1hr
     0.10, # dead_10hr
     0.15, # dead_100hr
     0.00, # dead_herbaceous (will be set by moisturize for dynamic fuel models)
     0.90, # live_herbaceous
     0.60, # live_woody
-]
+)
 midflame_wind_speed = 500.0 # m/min
 upwind_direction    = 215.0 # degrees clockwise from North
 slope               = 0.2   # rise/run
@@ -3987,14 +4036,14 @@ import pyretechnics.vector_utils as vu
 
 # Set input parameters
 fuel_model    = fm.get_fuel_model(101) # GR1
-fuel_moisture = [
+fuel_moisture = (
     0.05, # dead_1hr
     0.10, # dead_10hr
     0.15, # dead_100hr
     0.00, # dead_herbaceous (will be set by moisturize for dynamic fuel models)
     0.90, # live_herbaceous
     0.60, # live_woody
-]
+)
 midflame_wind_speed = 500.0 # m/min
 upwind_direction    = 215.0 # degrees clockwise from North
 slope               = 0.2   # rise/run
@@ -5340,14 +5389,14 @@ slope               = 0.8                    # rise/run
 aspect              = 225.0                  # degrees clockwise from North
 
 # Weather
-fuel_moisture    = [
+fuel_moisture    = (
     0.05, # dead_1hr
     0.10, # dead_10hr
     0.15, # dead_100hr
     0.00, # dead_herbaceous (will be set by moisturize for dynamic fuel models)
     0.90, # live_herbaceous
     0.60, # live_woody
-]                        # kg moisture/kg ovendry weight
+)                        # kg moisture/kg ovendry weight
 foliar_moisture  = 0.9   # kg moisture/kg ovendry weight
 wind_speed_10m   = 30.0  # km/hr
 upwind_direction = 180.0 # degrees clockwise from North
